--- a/css/tasks.css
+++ b/css/tasks.css
@@ -5,7 +5,7 @@
 
   padding: 5px;
 
-  border-bottom: #E6E6E6 1px inset;
+  border-bottom: inset #E6E6E6 1px;
   min-height: 30px;
 }
 
@@ -59,13 +59,13 @@ input:checked + .task:before {
   background-position: center;
   background-color: transparent;
 
-  border: solid #5dc2af 1px;
+  border: solid #5DC2Af 1px;
   border-radius: 50%;
 }
 
 .task:before +
 .task__checkbox:focus {
-  border: solid #4d90fe 1px;
+  border: solid #4D90FE 1px;
   border-radius: 50%;
 }
 
